<resources>
    <string name="app_name">Weather_App</string>
    <string name="cities">Cities</string>
    <string name="please_add_cities">Please Add City</string>
    <string name="add_city">Add city</string>
    <string name="cities_historical">City historical</string>
    <string name="no_find_historical_cities">No Find Historical Cities</string>
    <string name="weather_info">Weather information from</string>
    <string name="humidity">Humidity</string>
    <string name="description">Description</string>
    <string name="temperature">Temperature</string>
    <string name="Windspeed">Windspeed</string>
    <string name="add_new_city">Add new City</string>
    <string name="search_for_cities">Search For Cities</string>
    <string name="existing_city">Existing City</string>
</resources>