<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@null"
        >

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/bottomSheetAddCity"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"

    android:paddingBottom="@dimen/_150sdp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"

    >
        <ImageView
            android:id="@+id/ivSearchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:padding="@dimen/_12sdp"
            android:src="@mipmap/search_24px"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <EditText
            android:id="@+id/etAddNewCity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/search_for_cities"
            android:paddingStart="@dimen/_8sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivSearchIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ivSearchIcon"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/ivSearchIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_city"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textAllCaps="false"
            android:background="@drawable/custom_button_bg"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/ivSearchIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tvExistingCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existing_city"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/ivSearchIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>