<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/primary_color"
            >
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_bold"
                android:layout_margin="@dimen/_16sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <!-- Bottom shadow below header -->
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/bottom_shadow"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="@id/header"
            app:layout_constraintEnd_toEndOf="@id/header"/>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/group"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_weather_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/weather_info"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:layout_marginBottom="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_white_bg"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TextView
                android:id="@+id/tv_city_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/cities"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <ImageView
                android:id="@+id/img_city_icon"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:src="@mipmap/location_city_24px"
                app:layout_constraintTop_toBottomOf="@id/tv_city_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <!-- description -->
            <TextView
                android:id="@+id/tv_desc_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:layout_margin ="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/img_city_icon"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Cloudy"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/_16ssp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="@id/tv_desc_name"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <!-- Temperature -->
            <TextView
                android:id="@+id/tv_temp_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:layout_margin ="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_name"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="20 C"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/_16ssp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="@id/tv_temp_name"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <!-- Humidity -->
            <TextView
                android:id="@+id/tv_humi_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:layout_margin ="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_temp_name"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/tv_humi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="45%"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/_16ssp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="@id/tv_humi_name"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <!-- Windspeed -->
            <TextView
                android:id="@+id/tv_wind_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Windspeed"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:layout_margin ="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_humi_name"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="20 Km/h"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/_16ssp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="@id/tv_wind_name"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>